parser/src/test/resources/corpus/valid/13_effective_from_inception.ff
rule "From Inception" {
  effective: from inception
}
