parser/src/test/resources/corpus/invalid/15_effective_no_period.ff
rule "Effective Without Period" {
  effective:
}
